--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,21 @@
 
 # -classpath
 *.classpath
+.classpath
+.settings/com.genuitec.runtime.libraries.xml
+WebRoot/WEB-INF/lib/jacob-1.14.3.jar
+.settings/org.eclipse.jdt.core.prefs
+.settings/org.eclipse.wst.common.project.facet.core.xml
 .settings/com.genuitec.eclipse.migration.prefs
 .settings/org.eclipse.jdt.core.prefs
 .settings/org.eclipse.wst.common.project.facet.core.xml
 WebRoot/module/css/testReportManage/testReportManage.css
 resources/jdbc.properties
 
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /target/
+
+# IEDA ignore file
+*.iml
+*idea/
