--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 .settings/com.genuitec.runtime.libraries.xml
 WebRoot/WEB-INF/lib/jacob-1.14.3.jar
 .settings/org.eclipse.jdt.core.prefs
+resources/jdbc.properties
 .settings/org.eclipse.wst.common.project.facet.core.xml
 .settings/com.genuitec.eclipse.migration.prefs
 .settings/org.eclipse.jdt.core.prefs
