--- a/resources/systemParameters.properties
+++ b/resources/systemParameters.properties
@@ -19,3 +19,6 @@ templatePath=WEB-INF/classes/template
 chartPath=module/reports/
 resultModuleID=00010001
 formPath=module/reports/
+#our company
+ourCompanyName=西南计算机有限责任公司检测计量与软件测评中心
+ourCompanyAddress=重庆市南坪光电路1号
