--- a/resources/log4j.properties
+++ b/resources/log4j.properties
@@ -1,10 +1,9 @@
  ### set log levels ###
-log4j.rootLogger = INFO ,  stdout
-log4j.logger.com.cisdi.tool.log.LogOut=INFO, FILE
+log4j.rootLogger = INFO,stdout
+log4j.logger.com.cisdi.tool.log.LogOut=INFO
 
 ### export Console  ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target = System.err
 log4j.appender.stdout.layout=org.apache.log4j.SimpleLayout
 
 log4j.logger.com.ibatis=DEBUG
