--- a/resources/systemParameters.properties
+++ b/resources/systemParameters.properties
@@ -29,4 +29,5 @@ ourInvoiceType=普通机打发票
 ourFinancePhone=023-62928467
 ourEamile=119941138@qq.com
 ourFax=023-62928455
+ourLinkPhone=15245865214
 ourLinkMan=杨剑松
