edit sampleDeskop style

--- a/resources/systemParameters.properties
+++ b/resources/systemParameters.properties
@@ -27,7 +27,7 @@ ourAccount=3100027109003601247
 ourAccountProxy=重庆市工行南坪支行
 ourInvoiceType=普通机打发票
 ourFinancePhone=023-62928467
-ourEamile=119941138@qq.com
+ourEmail=119941138@qq.com
 ourFax=023-62928455
 ourLinkPhone=15245865214
 ourLinkMan=杨剑松
