--- a/resources/systemParameters.properties
+++ b/resources/systemParameters.properties
@@ -10,6 +10,8 @@ filePathNP=upload\\file
 #path
 imgPath=F\:\\upload\\img
 filePath=F\:\\upload\\file
+cacheFilePath=F\:\\upload\\cacheFile
+swfFilePath=F\:\\upload\\swfFile
 #route
 imgRoute=http\://127.0.0.1\:80/img
 fileRoute=http\://127.0.0.1\:80/file
