--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -1,11 +1,9 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1/laboratory?useUnicode=true&characterEncoding=utf8
+
+url=jdbc:mysql://superc102.vicp.cc/laboratory?useUnicode=true&characterEncoding=utf8
 username=root
-<<<<<<< Updated upstream
-password=1997627
-=======
-password=123
->>>>>>> Stashed changes
+password=All4Sanfu
+
 #定义初始连接数
 initialSize=0
 #定义最大连接数
