--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -1,8 +1,8 @@
 driver=com.mysql.jdbc.Driver
 
-url=jdbc:mysql://superc102.vicp.cc/laboratory?useUnicode=true&characterEncoding=utf8
+url=jdbc:mysql://127.0.0.1/laboratory?useUnicode=true&characterEncoding=utf8
 username=root
-password=All4Sanfu
+password=1996116
 
 #定义初始连接数
 initialSize=0
