--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://127.0.0.1/laboratory?useUnicode=true&characterEncoding=utf8
+url=jdbc:mysql://127.0.0.1/laboratory1?useUnicode=true&characterEncoding=utf8
 username=root
-password=1996116
+password=xywan1314
 #定义初始连接数
 initialSize=0
 #定义最大连接数
