--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -1,22 +1,16 @@
-<<<<<<< HEAD
-﻿driver=com.mysql.jdbc.Driver
-
-url=jdbc:mysql://127.0.0.1/laboratory?useUnicode=true&characterEncoding=utf8
-username=root
-password=
-
-=======
 driver=com.mysql.jdbc.Driver
-url=jdbc\:mysql\://localhost/laboratory?useUnicode\=true&characterEncoding\=utf8
-username=root
-password=1996116     
 
->>>>>>> a2b16e03ea3e344bce55cc3d8c5cab36db132600
+url=jdbc:mysql://superc102.vicp.cc:3306/laboratory?useUnicode=true&characterEncoding=utf8
+username=root
+password=All4Sanfu
+
 #定义初始连接数
 initialSize=0
 #定义最大连接数
 maxActive=20
+#定义最大空闲
 maxIdle=20
 #定义最小空闲
 minIdle=1
+#定义最大等待
 maxWait=60000
