--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -1,9 +1,7 @@
 driver=com.mysql.jdbc.Driver
-
-url=jdbc:mysql://superc102.vicp.cc:3306/laboratory?useUnicode=true&characterEncoding=utf8
+url=jdbc:mysql://localhost:3306/laboratory?useUnicode=true&characterEncoding=utf8
 username=root
-password=All4Sanfu
-
+password=forme0fama
 #定义初始连接数
 initialSize=0
 #定义最大连接数
