--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -4,6 +4,10 @@ url=jdbc:mysql://superc102.vicp.cc:3306/laboratory?useUnicode=true&characterEnco
 username=root
 password=All4Sanfu
 
+#url=jdbc:mysql://127.0.0.1:3306/testxiji?useUnicode=true&characterEncoding=utf8
+#username=root
+#password=root123456
+
 #定义初始连接数
 initialSize=0
 #定义最大连接数
