--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -2,7 +2,7 @@ driver=com.mysql.jdbc.Driver
 
 url=jdbc:mysql://localhost:3306/laboratory?useUnicode=true&characterEncoding=utf8
 username=root
-password=All4Sanfu
+password=forme0fama
 
 #url=jdbc:mysql://127.0.0.1:3306/testxiji?useUnicode=true&characterEncoding=utf8
 #username=root
