--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -1,6 +1,6 @@
 driver=com.mysql.jdbc.Driver
 
-url=jdbc:mysql://localhost:3306/laboratory?useUnicode=true&characterEncoding=utf8
+url=jdbc:mysql://superc102.vicp.cc:3306/laboratory?useUnicode=true&characterEncoding=utf8
 username=root
 password=All4Sanfu
 
