--- a/resources/systemParameters.properties
+++ b/resources/systemParameters.properties
@@ -24,7 +24,7 @@ resultModuleID=00010001
 formPath=module/reports/
 #our company
 ourCompanyName=西南计算机有限责任公司
-ourLinkCompanyName=西南计算机有限责任公司检测计量与软件测评中心
+ourLinkCompanyName=西南计算机有限责任检测计量与软件测评中心
 ourCompanyAddress=\u91CD\u5E86\u5E02\u5357\u576A\u5149\u7535\u8DEF1\u53F7
 ourAccount=3100027109003601247
 ourAccountProxy=重庆市工行南坪支行
