--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -1,16 +1,16 @@
 driver=com.mysql.jdbc.Driver
 
-url=jdbc:mysql://superc102.vicp.cc:3306/laboratory?useUnicode=true&characterEncoding=utf8
-username=root
-password=All4Sanfu
+#url=jdbc:mysql://superc102.vicp.cc:3306/laboratory?useUnicode=true&characterEncoding=utf8
+#username=root
+#password=All4Sanfu
 
 #url=jdbc:mysql://192.168.0.135:3306/laboratory?useUnicode=true&characterEncoding=utf8
 #username=root
 #password=All4Sanfu
 
-#url=jdbc:mysql://127.0.0.1:3306/testxiji?useUnicode=true&characterEncoding=utf8
-#username=root
-#password=root123456
+url=jdbc:mysql://127.0.0.1:3306/laboratory?useUnicode=true&characterEncoding=utf8
+username=root
+password=1996116
 
 #定义初始连接数
 initialSize=1
