--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -7,10 +7,9 @@ driver=com.mysql.jdbc.Driver
 #url=jdbc:mysql://192.168.0.135:3306/laboratory?useUnicode=true&characterEncoding=utf8
 #username=root
 #password=All4Sanfu
-
-url=jdbc:mysql://127.0.0.1:3306/laboratory?useUnicode=true&characterEncoding=utf8
+url=jdbc:mysql://localhost:3306/laboratory?useUnicode=true&characterEncoding=utf8
 username=root
-password=1996116
+password=forme0fama
 
 #定义初始连接数
 initialSize=1
