--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -8,9 +8,13 @@ driver=com.mysql.jdbc.Driver
 #username=root
 #password=All4Sanfu
 
-url=jdbc:mysql://127.0.0.1:3306/laboratory?useUnicode=true&characterEncoding=utf8
+#url=jdbc:mysql://127.0.0.1:3306/laboratory?useUnicode=true&characterEncoding=utf8
+#username=root
+#password=1996116
+
+url=jdbc:mysql://127.0.0.1:3306/testxiji?useUnicode=true&characterEncoding=utf8
 username=root
-password=1996116
+password=root123456
 
 #定义初始连接数
 initialSize=1
