edit conflct jdbc.properties

--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -8,16 +8,13 @@ driver=com.mysql.jdbc.Driver
 #username=root
 #password=All4Sanfu
 
-<<<<<<< HEAD
-url=jdbc:mysql://localhost:3306/testxiji?useUnicode=true&characterEncoding=utf8
-username=root
-password=root123456
-=======
-url=jdbc:mysql://127.0.0.1:3306/laboratory?useUnicode=true&characterEncoding=utf8
+
+url=jdbc\:mysql\://127.0.0.1\:3306/laboratory?useUnicode\=true&characterEncoding\=utf8
 username=root
 password=1996116
 
->>>>>>> origin/master
+
+
 
 #定义初始连接数
 initialSize=1
