--- a/resources/systemParameters.properties
+++ b/resources/systemParameters.properties
@@ -8,6 +8,7 @@ imgPathNP=upload\\img
 filePathNP=upload\\file
 #Proxy
 #path
+headCropImg=F\:\\upload\\img\\headCrop
 imgPath=F\:\\upload\\img
 filePath=F\:\\upload\\file
 cacheFilePath=F\:\\upload\\cacheFile
