--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -9,14 +9,9 @@ driver=com.mysql.jdbc.Driver
 #password=All4Sanfu
 
 
-url=jdbc\:mysql\://127.0.0.1\:3306/laboratory?useUnicode\=true&characterEncoding\=utf8
+url=jdbc\:mysql\://localhost\:3306/laboratory?useUnicode\=true&characterEncoding\=utf8
 username=root
-password=1996116
-
-
-
-
-
+password=forme0fama
 
 #定义初始连接数
 initialSize=1
