--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -9,9 +9,13 @@ driver=com.mysql.jdbc.Driver
 #password=All4Sanfu
 
 
-url=jdbc\:mysql\://superc102.vicp.cc\:3307/laboratory?useUnicode\=true&characterEncoding\=utf8
+#url=jdbc:mysql://superc102.vicp.cc:3307/laboratory?useUnicode=true&characterEncoding=utf8
+#username=root
+#password=All4Sanfu
+
+url=jdbc:mysql://localhost:3306/laboratory?useUnicode=true&characterEncoding=utf8
 username=root
-password=All4Sanfu
+password=root123456
 
 #定义初始连接数
 initialSize=1
