--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,13 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/git/poi/poi-bin-3.16-beta2-20170202/poi-3.16-beta2/ooxml-lib/curvesapi-1.04.jar"/>
+	<classpathentry kind="lib" path="D:/git/poi/poi-bin-3.16-beta2-20170202/poi-3.16-beta2/ooxml-lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="D:/git/poi/poi-bin-3.16-beta2-20170202/poi-3.16-beta2/poi-3.16-beta2.jar"/>
+	<classpathentry kind="lib" path="D:/git/poi/poi-bin-3.16-beta2-20170202/poi-3.16-beta2/poi-examples-3.16-beta2.jar"/>
+	<classpathentry kind="lib" path="D:/git/poi/poi-bin-3.16-beta2-20170202/poi-3.16-beta2/poi-excelant-3.16-beta2.jar"/>
+	<classpathentry kind="lib" path="D:/git/poi/poi-bin-3.16-beta2-20170202/poi-3.16-beta2/poi-ooxml-3.16-beta2.jar"/>
+	<classpathentry kind="lib" path="D:/git/poi/poi-bin-3.16-beta2-20170202/poi-3.16-beta2/poi-ooxml-schemas-3.16-beta2.jar"/>
+	<classpathentry kind="lib" path="D:/git/poi/poi-bin-3.16-beta2-20170202/poi-3.16-beta2/poi-scratchpad-3.16-beta2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
