--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -12,7 +12,8 @@ driver=com.mysql.jdbc.Driver
 #username=root
 #password=All4Sanfu
 
-url=jdbc\:mysql\://superc102.vicp.cc\:3307/laboratory?useUnicode\=true&characterEncoding\=utf8
+#url=jdbc\:mysql\://superc102.vicp.cc\:3307/laboratory?useUnicode\=true&characterEncoding\=utf8
+url=jdbc:mysql://localhost:3306/laboratory?useUnicode=true&characterEncoding=utf8
 username=root
 password=root123456
 
