--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -8,18 +8,9 @@ driver=com.mysql.jdbc.Driver
 #username=root
 #password=All4Sanfu
 
-#url=jdbc:mysql://superc102.vicp.cc:3307/laboratory?useUnicode=true&characterEncoding=utf8
-#username=root
-#password=All4Sanfu
-
-<<<<<<< HEAD
-#url=jdbc\:mysql\://superc102.vicp.cc\:3307/laboratory?useUnicode\=true&characterEncoding\=utf8
-url=jdbc:mysql://localhost:3306/laboratory?useUnicode=true&characterEncoding=utf8
-=======
-url=jdbc\:mysql\://127.0.0.1\:3306/laboratory?useUnicode\=true&characterEncoding\=utf8
->>>>>>> origin/master
+url=jdbc:mysql://superc102.vicp.cc:3307/laboratory?useUnicode=true&characterEncoding=utf8
 username=root
-password=root123456
+password=All4Sanfu
 
 #定义初始连接数
 initialSize=1
