--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -12,14 +12,11 @@ driver=com.mysql.jdbc.Driver
 #username=root
 #password=All4Sanfu
 
-<<<<<<< HEAD
-#url=jdbc\:mysql\://superc102.vicp.cc\:3307/laboratory?useUnicode\=true&characterEncoding\=utf8
-url=jdbc:mysql://localhost:3306/laboratory?useUnicode=true&characterEncoding=utf8
-=======
-url=jdbc\:mysql\://127.0.0.1\:3306/laboratory?useUnicode\=true&characterEncoding\=utf8
->>>>>>> origin/master
+url=jdbc\:mysql\://superc102.vicp.cc\:3307/laboratory?useUnicode\=true&characterEncoding\=utf8
+#url=jdbc\:mysql\://127.0.0.1\:3306/laboratory?useUnicode\=true&characterEncoding\=utf8
+
 username=root
-password=root123456
+password=123456
 
 #定义初始连接数
 initialSize=1
