--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driver=com.mysql.jdbc.Driver
 
 #url=jdbc:mysql://127.0.0.1:3306/laboratory?useUnicode=true&characterEncoding=utf8
-url=jdbc\\\:mysql\\\://superc102.vicp.cc\\\:3307/laboratory?useUnicode\\\=true&characterEncoding\\\=utf8
+url=jdbc:mysql://superc102.vicp.cc:3307/laboratory?useUnicode=true&characterEncoding=utf8
 #url=jdbc\:mysql\://127.0.0.1\:3306/laboratory?useUnicode\=true&characterEncoding\=utf8
 
 username=root
