--- a/resources/systemParameters.properties
+++ b/resources/systemParameters.properties
@@ -8,11 +8,11 @@ imgPathNP=upload\\img
 filePathNP=upload\\file
 #Proxy
 #path
-headCropImg=F\:\\upload\\img\\headCrop
-imgPath=F\:\\upload\\img
-filePath=F\:\\upload\\file
-cacheFilePath=F\:\\upload\\cacheFile
-swfFilePath=F\:\\upload\\swfFile
+headCropImg=D\:\\upload\\img\\headCrop
+imgPath=D\:\\upload\\img
+filePath=D\:\\upload\\file
+cacheFilePath=D\:\\upload\\cacheFile
+swfFilePath=D\:\\upload\\swfFile
 
 #route
 imgRoute=http\://127.0.0.1\:80/img
