--- a/resources/jdbc.properties
+++ b/resources/jdbc.properties
@@ -6,7 +6,7 @@ url=jdbc\:mysql\://127.0.0.1\:3306/laboratory?useUnicode\=true&characterEncoding
 
 username=root
 #password=All4Sanfu
-password=1997627
+password=123
 
 #定义初始连接数
 initialSize=1
