--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
 										</versionRange>
 										<goals>
 											<goal>resources</goal>
+											<goal>testResources</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
@@ -261,6 +262,7 @@
 			<artifactId>jacob</artifactId>
 			<version>1.14.3</version>
 		</dependency>
+
 	<!-- 	<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
